--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "easy-tables",
-    "slug": "easy-tables"
+    "name": "expo-router-typescript",
+    "slug": "expo-router-typescript"
   }
 }
